修改登录页

--- a/app.json
+++ b/app.json
@@ -15,5 +15,6 @@
     "cu-custom": "/colorui/components/cu-custom"
   },
   "style": "v2",
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "lazyCodeLoading": "requiredComponents"
 }
